# sailor

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  leptosfmt.toml
.github/workflows/: deploy.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  command.rs  main.rs  socket.rs
crates/cli/src/app/: command.rs  controller.rs  failure.rs  modules.rs
crates/cli/src/app/modules/: application.rs  help.rs  status.rs
crates/cli/src/command/: app.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: application.rs  control.rs  lib.rs  proxy.rs  socket.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: app.rs  configuration.rs  interface.rs  lib.rs  main.rs  server.rs  socket.rs
crates/daemon/src/app/: connection.rs  server.rs  socket.rs
crates/daemon/src/server/: proxy.rs
crates/daemon/src/server/proxy/: body.rs  fetcher.rs
crates/daemon/src/socket/: connection.rs  service.rs
crates/web/: Cargo.toml
crates/web/src/: app.rs  files.rs  lib.rs  service.rs
crates/web/style/: main.scss
docs/: development.md  setting-up-vps.md
install/: systemd.service  systemd.socket  ufw-setup.sh  ufw.ini
