[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
axum = "0.7.5"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = "0.1.6"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = "1.38.0"
tower = "0.4.13"
tracing = "0.1.40"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
