[package]
name = "sail_daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "saild"
path = "src/main.rs"

[dependencies]
sail_core = { path = "../core" }
serde_json.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
