[package]
name = "sail_daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "saild"
path = "src/main.rs"

[dependencies]
http-body-util.workspace = true
hyper = { workspace = true }
hyper-util = { workspace = true, features = [
    "http1",
    "server-graceful",
    "service",
    "tokio",
] }
sail_core = { path = "../core" }
serde_json.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
