[package]
name = "sailor_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
http.workspace = true
http-body = "1.0.0"
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
sailor_config = { path = "../config" }
sailor_core = { path = "../core" }
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-wasm = "0.2.1"
