[package]
name = "sail_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
console_error_panic_hook = "0.1.7"
http.workspace = true
http-body = "1.0.0"
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
sail_config = { path = "../config" }
sail_core = { path = "../core" }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = { workspace = true }
